# invoice-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
invoce_service/: app.py  config.py  models.py  schemas.py
invoice_service/: config.py  kafka.py  logger.py  main.py  models.py  schemas.py
invoice_service/routes/: invoice.py
